# coldfront-storage-plugin

./: README.md  pyproject.toml  storage.py
storage/: admin.py  apps.py  constants.py  forms.py  models.py  signals.py  starfish.py  tasks.py  truenas.py  urls.py  utils.py  vast.py  views.py
storage/templates/allocation/: allocation_attribute_edit.html  allocation_request_list.html  storage_request_details.html
storage/tests/: test_starfish.py
